mdapi/Custom/objects/Property__c.object
<CustomObject>
    <description>This is the output of the Acquisition reporting process and is the primary &quot;purchase record&quot; of all of our properties.</description>
    <fields>
        <fullName>AC_or_Evap__c</fullName>
        <formula>TEXT(Residence__r.AC_or_Evap__c)</formula>
        <label>AC or Evap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APN__c</fullName>
        <formula>Residence__r.APN__c</formula>
        <label>APN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abandoned_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abandoned Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acq_Cost_Basis_Est__c</fullName>
        <label>Acq Cost Basis Est</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acq_Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Pipeline</label>
        <referenceTo>AcqPipeline__c</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acq_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Prospect</label>
        <referenceTo>Acq_Prospect__c</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Analyst__c</fullName>
        <label>Acquisition Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_Est_UW__c</fullName>
        <formula>IF(
				NOT(
								ISBLANK(
												 Acq_Cost_Basis_Est__c 
												)
								),
				Acq_Cost_Basis_Est__c,

IF( 
AND( 
ISNULL(Bid_Service_Expense__c), 
ISNULL(Broker_Expense_Est_UW__c),
ISNULL(Actual_Acquisition_Price__c ), 
ISNULL(Rehab_Budget_Est_UW__c), 
ISNULL(Back_Taxes_Est_UW__c), 
ISNULL(Liens_Fines_Est_UW__c) 
), 
null, 
( 
IF(Bid_Service_Expense__c &gt; 0, Bid_Service_Expense__c, 0) 
+
IF(Broker_Expense_Est_UW__c&gt; 0, Broker_Expense_Est_UW__c, 0) 
+ 
IF(Actual_Acquisition_Price__c &gt; 0, Actual_Acquisition_Price__c , 0) 
+ 
IF(Rehab_Budget_Est_UW__c &gt; 0, Rehab_Budget_Est_UW__c, 0) + 
+ 
IF(Back_Taxes_Est_UW__c &gt; 0, Back_Taxes_Est_UW__c, 0) + 
+ 
IF(Liens_Fines_Est_UW__c &gt; 0, Liens_Fines_Est_UW__c, 0) 
) 
)
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis Est @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
	Acquisition_Basis_Est_UW__c / Square_Feet__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis PSF Est @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <inlineHelpText>Once a property has been financed, this date should not be changed without checking with Asset Mgmt. first.  Otherwise, if the docs support the change, it&apos;s fine.  Note that &quot;BK Status&quot; derives its value from this field.</inlineHelpText>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Overhead_Formula__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c  + CFK_Est_UW__c)
* (CASE (Fund__c, &apos;01&apos;, 0.0000,&apos;02&apos;, 0.0000, &apos;03&apos;, 0.0000, &apos;04&apos;, 0.0000, 0.0000)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Overhead (Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Overhead__c</fullName>
        <label>Acquisition Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_Discount_to_Max_Bid__c</fullName>
        <formula>IF(Max_Bid_Price__c &gt; 0, 1-(Actual_Acquisition_Price__c/Max_Bid_Price__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price Discount to Max Bid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
  Actual_Acquisition_Price__c /Square_Feet__c,
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_prct_Market_Value_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
	Actual_Acquisition_Price__c / Market_Value_UW__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price as % Market Value@UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidding Statistics #</label>
        <referenceTo>Bidding_Statistics__c</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Status_Prior_Value__c</fullName>
        <label>Acquisition Status Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Status__c</fullName>
        <label>Acquisition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired</fullName>
                    <default>true</default>
                    <label>Acquired</label>
                </value>
                <value>
                    <fullName>Limbo</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>For Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisitions_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portfolio_Acquisitions_Analysts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisitions_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Team Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties4_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Leases__c</fullName>
        <label># Active Leases</label>
        <summaryFilterItems>
            <field>Tenant_Card__c.Yardi_Active_Lease__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Tenant_Card__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Rehab__c</fullName>
        <label># Active Rehab</label>
        <summaryFilterItems>
            <field>Rehab__c.Rehab_Status__c</field>
            <operation>startsWith</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Rehab__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Acquisition_Price__c</fullName>
        <description>Contract Price on Pipeline becomes the Acquisition Price on Property object upon submission to Asset Management</description>
        <inlineHelpText>This amount and Contract Price should match unless there is a Credits at Close Value.  Contract Price + Credits at Close (if Credits at Close is a negative number, it will be Contract Price - Credits at Close).</inlineHelpText>
        <label>Actual Acquisition Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Back_Taxes_Paid_Underwriting__c</fullName>
        <label>Actual Back Taxes Paid @ Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Lease_Amt__c</fullName>
        <label>Actual Lease Amt. ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Leasing_Commissions_Paid_First__c</fullName>
        <formula>Null</formula>
        <label>Actual Leasing Commissions Paid @ First</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Liens_Fines__c</fullName>
        <label>Actual Liens/Fines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Monthly_Admin_Fees__c</fullName>
        <label>Actual Monthly Admin Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Move_in_Date__c</fullName>
        <label>Actual Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Other_Closing_Costs__c</fullName>
        <label>Actual Other Closing Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Result_Details__c</fullName>
        <formula>HYPERLINK(Actual_Results_ID__c, &quot;Click here for more details&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Result Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Results_ID__c</fullName>
        <label>Actual Results ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Title_Policy_Cost__c</fullName>
        <label>Actual Title Policy Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_MKT_UW__c</fullName>
        <formula>IF(Market_Value_UW__c&gt; 0,
	All_In_Cost_Est_UW__c  / Market_Value_UW__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption % MKT @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_prcnt_peak_UW__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0,
	All_In_Cost_Est_UW__c /Previous_High_Value__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ % of peak</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_replace_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_old__c &gt; 0,
	All_In_Cost_Est_UW__c /  Replacement_Cost_Est_UW_old__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ UW Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Est_UW__c</fullName>
        <formula>Acquisition_Basis_Est_UW__c + Acquisition_Overhead__c + Rehab_Overhead__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Platform_Buildup_Allocation__c + Initial_Lease_up_Cost_Est_UW__c + Bridge_Cost_during_Rehab_and_Lease_up__c + CFK_Est_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Acquisition Basis Est @ UW (a formula) + Acquisition Overhead + Rehab Overhead + Title Policy Cost Est. UW + Other Closing Costs Est UW + Platform Buildup Allocation + Initial Lease-up Cost Est UW + Bridge Cost during Rehab and Lease-up + CFK Est. @ UW</inlineHelpText>
        <label>All-In Cost Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
	All_In_Cost_Est_UW__c / Square_Feet__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost PSF Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliant_Building_Value__c</fullName>
        <description>For the Alliant flood insurance process.</description>
        <label>Alliant Building Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliant_City__c</fullName>
        <label>Alliant City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliant_County__c</fullName>
        <label>Alliant County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliant_TIV__c</fullName>
        <label>Alliant TIV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Loan_Amount__c</fullName>
        <label>Allocated Loan Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amortization_Years__c</fullName>
        <label>Amortization (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_for_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_for_Sale_timestamp__c</fullName>
        <description>D-00015585:Requesting additional field in Portfolio record that timestamps when &quot;Approved for Sale&quot; field is checked &quot;Yes&quot;.</description>
        <label>Approved for Sale timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asking_Rent_First_Lease__c</fullName>
        <label>Asking Rent @ First Lease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_DK_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned_DK_Driver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BK_Contest_Internal_Decision_Date__c</fullName>
        <label>BK Contest Internal Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BK_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+  BK_Id__c , &quot;Click here for more details&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BK Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BK_Expected_Resolution_Date__c</fullName>
        <label>BK Expected Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BK_Filing_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Post Acquisition Next Step calc
BK Status
TIP Status</inlineHelpText>
        <label>BK Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BK_Id__c</fullName>
        <label>BK Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BK_Notes__c</fullName>
        <inlineHelpText>Following the following format when entering notes: Date(MM/DD/YYYY) - Your Name: Note</inlineHelpText>
        <label>BK Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BK_Resolution__c</fullName>
        <label>BK Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BK_Resolved_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
BK Status
TIP Status</inlineHelpText>
        <label>BK Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BK_Status__c</fullName>
        <formula>IF(
	OR(BK_Filing_Date__c &lt; Acquisition_Date__c,  TEXT(Proxy_BK_Status__c)= $Setup.Status_Tags__c.BKS_PreAcq_BK__c ) ,
	 $Setup.Status_Tags__c.BKS_PreAcq_BK__c ,
	IF(
		OR(AND(
			BK_Filing_Date__c&gt;Acquisition_Date__c,
			ISBLANK(BK_Resolved_Date__c ), Text(Proxy_BK_Status__c)= $Setup.Status_Tags__c.BKS_PostAcq_BK_Unresolved__c )
		),
		 $Setup.Status_Tags__c.BKS_PostAcq_BK_Unresolved__c  ,
		IF(
			AND(
				BK_Filing_Date__c&gt;Acquisition_Date__c,
				NOT(ISBLANK(BK_Resolved_Date__c))
			),
		 $Setup.Status_Tags__c.BKS_PostAcq_BK_Resolved__c ,
		&quot;&quot;
		)
	)
)</formula>
        <label>BK Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BK_Type__c</fullName>
        <label>BK Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre BK</fullName>
                </value>
                <value>
                    <fullName>Post Acquisition BK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BX_All_In_Cost_Est_Disc_to_Market_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0, 
1 - All_In_Cost_Est_UW__c / Market_Value_UW__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX All-In Cost Est. Disc. to Market @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Disc_to_Market_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0, 
1 -   Actual_Acquisition_Price__c  / Market_Value_UW__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Disc. to Market @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Discount_to_Peak_UW__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0, 
1 -   Actual_Acquisition_Price__c  / Previous_High_Value__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Discount to Peak @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Discount_to_Repl_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_old__c &gt; 0, 
1 -    Actual_Acquisition_Price__c  / Replacement_Cost_Est_UW_old__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Discount to Repl. @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Due__c</fullName>
        <label>Back Taxes Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Est_UW__c</fullName>
        <label>Back Taxes Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baths__c</fullName>
        <formula>Residence__r.Baths__c</formula>
        <label>Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <formula>Residence__r.Bedrooms__c</formula>
        <label>Bedrooms</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense_Est_UW__c</fullName>
        <formula>Bid_Service_Expense__c</formula>
        <label>Bid Service Expense Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense__c</fullName>
        <label>Bid Service (Expense)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Form_of_Payment__c</fullName>
        <label>Bid Service Form of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Service</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio (Bid Service)</relationshipLabel>
        <relationshipName>BidServicePortfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Prior_Value__c</fullName>
        <label>Bid Type Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Sub_Prior_Value__c</fullName>
        <label>Bid Type Sub Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Sub__c</fullName>
        <label>Bid Type Sub</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bid_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>REO</fullName>
                </value>
                <value>
                    <fullName>Bulk Sale</fullName>
                </value>
                <value>
                    <fullName>Short Sale</fullName>
                </value>
                <value>
                    <fullName>Off Market (Don&apos;t Use)</fullName>
                </value>
                <value>
                    <fullName>Retail Auction (Don&apos;t Use)</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor (Don&apos;t Use)</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Homeowner (Don&apos;t Use)</fullName>
                </value>
                <value>
                    <fullName>Standard Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bona_Fide_Lease_Status__c</fullName>
        <label>Bona Fide Lease Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bona Fide Lease</fullName>
                </value>
                <value>
                    <fullName>Non Bona Fide Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bridge_Cost_during_Rehab_and_Lease_up__c</fullName>
        <label>Bridge Cost during Rehab and Lease-up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Expense_Est_UW__c</fullName>
        <label>Broker Expense Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brokerage_Text__c</fullName>
        <formula>Pipeline__r.Brokerage__r.Name</formula>
        <inlineHelpText>This field is for use in reports in place of the Brokerage field, which returns a string of Hyperlink text when exported to Excel.</inlineHelpText>
        <label>Brokerage Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Pipeline__r.Brokerage__r.Id, Pipeline__r.Brokerage__r.Name)</formula>
        <label>Brokerage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_CFK__c</fullName>
        <label>Budgeted CFK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Ranking__c</fullName>
        <inlineHelpText>&quot;1&quot; means the property fits current Bulk Deal acquisition criteria; &quot;2&quot; means it does not meet current criteria but it is manageable; &quot;3&quot; means the property will be sold after purchase.</inlineHelpText>
        <label>Bulk Deal Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Deal</label>
        <referenceTo>Bulk_Sale__c</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFK_Actual_Amount_Paid__c</fullName>
        <label>CFK Actual Amount Paid ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFK_Actual_Move_Out_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Deed Status
TIP Status
CFK Status
Occupied Status @ Current</inlineHelpText>
        <label>CFK Actual Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Agreed_Amount__c</fullName>
        <label>CFK Agreed Amount ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFK_Agreed_Move_Out_Date__c</fullName>
        <label>CFK Agreed Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Date_File_Check_Handed_to_Driver__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK Date File &amp; Check Handed to Driver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Deal_Accepted_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK Deal Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Details__c</fullName>
        <formula>HYPERLINK(CFK_ID__c, &quot;Click here for more details&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFK Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFK_Driver_receiving_check__c</fullName>
        <label>CFK Driver receiving check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFK_Est_UW__c</fullName>
        <label>CFK Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFK_ID__c</fullName>
        <label>CFK ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFK_Indication_of_Interest_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK Indication of Interest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Notes__c</fullName>
        <inlineHelpText>Following the following format when entering notes: Date(MM/DD/YYYY) - Your Name: Note</inlineHelpText>
        <label>CFK Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CFK_Paid_Date__c</fullName>
        <label>CFK Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_Payee_Occupant_Name_W_9__c</fullName>
        <label>CFK Payee/Occupant Name (W-9)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFK_Status__c</fullName>
        <label>CFK Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFK Agreed with Occupant</fullName>
                </value>
                <value>
                    <fullName>CFK Check given to Driver</fullName>
                </value>
                <value>
                    <fullName>CFK Check Received from Finance</fullName>
                </value>
                <value>
                    <fullName>CFK Check Requested from Finance</fullName>
                </value>
                <value>
                    <fullName>CFK Deal Aborted</fullName>
                </value>
                <value>
                    <fullName>CFK Negotiation in Process</fullName>
                </value>
                <value>
                    <fullName>CFK Unsuccessful Negotiation</fullName>
                </value>
                <value>
                    <fullName>Moved Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFK_Unsuccessful_Negotations_E__c</fullName>
        <inlineHelpText>Only enter an unsuccessful negotiations date when you are confident discussions are permanently finished.  This field should not be unchecked.

The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK Unsuccessful Negotations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_cashiers_check_received_from_Finance__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK cashiers check received from Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFK_cashiers_check_requested_from_Financ__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
CFK Status</inlineHelpText>
        <label>CFK cashiers check reqstd from Finance</label>
        <type>Date</type>
    </fields>
</CustomObject>